--- a/app/src/main/res/layout/dialog_for_sort.xml
+++ b/app/src/main/res/layout/dialog_for_sort.xml
@@ -46,8 +46,8 @@
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn_save_selector"
-                android:text="ASENDING"
+                android:background="@drawable/btn_initilize_selector"
+                android:text="Ascending"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
@@ -57,8 +57,8 @@
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn_save_selector"
-                android:text="DESENDING"
+                android:background="@drawable/btn_initilize_selector"
+                android:text="Descending"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
@@ -69,8 +69,8 @@
                 android:layout_height="0dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn_save_selector"
-                android:text="DATE"
+                android:background="@drawable/btn_initilize_selector"
+                android:text="Date"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
 
